# iris-code

./: .gitignore  Cargo.toml  DEPLOY_PAGE.md  README.md  biome.json  install.sh  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
_old_version_backup/docs/: CNAME  mtplx-pr31-split-disposition.md
_old_version_backup/src/: logo.rs  mtplx_runner.rs  pretty.rs  prune.rs  read_cache.rs  repl.rs  setup.rs  sparkline.rs  sticky_bar.rs  theme.rs  typeahead.rs
_old_version_backup/tools/: check-flake.sh
assets/: hippo-logo.txt
docs/: index.html  mtplx-pr31-split-disposition.md
docs/demo/: index.html
examples/: airplane.html
scripts/: chat-monitor.py  install-local.sh
src/: agent.rs  agent.ts  auto_commit.ts  background_tasks.ts  browser_check.ts  clear_stale.ts  cli.ts  client.rs  client.ts  compact.ts  config.ts  diff.ts  dry_run_log.rs  file_io.ts  logo.rs  main.rs  mtplx_manager.ts  mtplx_runner.rs  picker.rs  pretty.rs  prune.rs  read_cache.rs  read_state.ts  repl.rs  runlog.rs  schema.rs  schema.ts  session_lock.ts  session_store.rs  session_store.ts  setup.rs  setup.ts  sidecar.ts  sparkline.rs  sticky_bar.rs  subagent.ts  system_prompt.ts  task_manager.ts  theme.rs  tool_result_prune.ts  (+4 more)
src/tools/: bash.rs  bash.ts  bg.ts  browser.ts  delegate.ts  (+23 more)
test-game/: index.html  package-lock.json  package.json  vite.config.js
tests/: agent.test.ts  auto_commit.test.ts  auto_compact.test.ts  background_tasks.test.ts  bash_tool.test.ts  clear_stale.test.ts  cli_parse.test.ts  client.test.ts  client_recovery.test.ts  compact.test.ts  delegate.test.ts  hippo_words.test.ts  loop.test.ts  mtplx_manager.test.ts  peek_log.test.ts  schema.test.ts  search_tool.test.ts  session_store.test.ts  sidecar.test.ts  stats.test.ts  system_prompt.test.ts  task_manager.test.ts  tool_label.test.ts  tool_result_prune.test.ts  tools.test.ts  tools_extra.test.ts  topic_detect.test.ts
tools/: render-logo-png.py
(+37 files in other folders)
