[package]
name = "mlx-code"
version = "0.3.6"
edition = "2021"
description = "Lightweight Rust CLI coding agent for a local MTPLX server"

[[bin]]
name = "hip"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "io-std", "fs", "time", "sync", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
ignore = "0.4"
walkdir = "2"
globset = "0.4"
futures-util = "0.3"
bytes = "1"
shellexpand = "3"
once_cell = "1"
regex = "1"
rustyline = "14"
terminal_size = "0.4"
libc = "0.2"
# Arrow-key list picker for `hip --resume`. default-features pulls in
# `console` for terminal control; we don't enable `fuzzy-select` because
# basic Select is enough.
dialoguer = { version = "0.11", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
